<resources>
    <string name="app_name">Homeberry</string>
    <string name="title_activity_light_device">LightDeviceActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one_more_step">One more step</string>
    <string name="finish">Finish</string>
    <string name="starting_sign_in_assist">Starting Sign-in assist</string>
    <string name="ensure_pi_on_reminder">To finish setting up your Raspberry Pi\nplease make sure it is turned on</string>
    <string name="white">White</string>
    <string name="rgb">RGB</string>
    <string name="delete_your_account">Delete your account?</string>
    <string name="warning">Warning!</string>
    <string name="all_data_will_be_lost">None of your account data can be recovered after deletion. This includes all your devices and scenes.</string>
    <string name="delete_instructions">To delete your account please write the following numbers in the field below:</string>
    <string name="create_new_scene">Scene editor</string>
    <string name="scene_name">scene name</string>
    <string name="select_devices_for_your_scene">Select devices for your scene:</string>
    <string name="water_status">Water status</string>
    <string name="cup_status">Cup status</string>
    <string name="make_coffee">Make coffee</string>
    <string name="your_devices">Your devices</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="reset_password">Reset password</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="dont_have_an_account">Don\'t have an account? Sign up</string>
    <string name="notifications">Notifications</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account_question">Already have an account?</string>
    <string name="scenes">Scenes</string>
    <string name="if_pi_cant_get_devices">If your raspberry pi cannot get your device data.</string>
    <string name="reconnect_raspberry_pi">Reconnect Raspberry Pi</string>
    <string name="settings_and_account">Settings and account</string>
    <string name="account_settings">Account settings</string>
    <string name="sign_out">Sign out</string>
    <string name="change_email_address">Change email address</string>
    <string name="delete_account">Delete account</string>
    <string name="appearance">Appearance</string>
    <string name="toggle_night_mode">Toggle night mode</string>
    <string name="enable_disable_notif_text">Enable/disable all notifications</string>
    <string name="receive_email_updates">Receive email updates</string>
    <string name="hardware_setup">Hardware Setup</string>
    <string name="copy_following_code">Copy the following code into your arduino project: (case sensitive)</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="verification_link_sent_to_email">A verification link has been sent to your email address. To verify your acocunt, click on the link in the email.</string>
    <string name="i_have_verified_my_account">I have verified my account</string>
    <string name="resend_verification_email">Resend verification email</string>
    <string name="sign_in_with_a_different_account">Sign in with a different account</string>
    <string name="notify_when_sensor_is">Notify when sensor is</string>
    <string name="true_active">true / active</string>
    <string name="false_inactive">false / inactive</string>
    <string name="message_default">Message: default</string>
    <string name="edit">Edit</string>
    <string name="notify_when_sensor_value">Notify when sensor value</string>
    <string name="greater_than">greater than</string>
    <string name="equals">equals</string>
    <string name="less_than">less than</string>
    <string name="value">Value:</string>
    <string name="message">Message:</string>

    <string name="reset_link_sent_to">Password reset link sent to:\n%1$s</string>
    <string name="signed_in_as">Signed in as: %1$s</string>
    <string name="signing_in_as">Singing in as: %1$s</string>
    <string name="number_of_devices_number">Number of devices: %1$d</string>
    <string name="degrees_C_suffix">%1$d°C</string>
    <string name="percent_suffix">%1$d&#37;</string>
    <string name="notif_message">Message: %1$s</string>


    <string name="forgotten_password">Forgotten password</string>
    <string name="no_account_of_email">This email address does not have an associated account</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="password_at_least__num_char_error">Passwords are at least 10 characters long</string>
    <string name="password_have_uppercase_error">Passwords must have at least one upper-case letter</string>
    <string name="password_have_lowercase_error">Passwords must have at least one lower-case letter</string>
    <string name="dont_have_an_account_question">Don\'t have an account? </string>
    <string name="email_is_not_verified">Email is not verified</string>
    <string name="email_resent_verification">New verification email sent</string>
    <string name="failed_to_send_verification_email">Failed to send email</string>
    <string name="an_error_occured">An error occurred</string>
    <string name="error_node_doesnt_exit">An error occurred, node does not exist</string>
    <string name="water_present">Water present</string>
    <string name="motion_detected">Motion detected</string>
    <string name="door_open">Door open</string>
    <string name="activated">Activated</string>
    <string name="no_water">No water</string>
    <string name="no_motion">No motion</string>
    <string name="door_closed">Door closed</string>
    <string name="not_activated">Not activated</string>
    <string name="greeting_morning">Good morning</string>
    <string name="greeting_afternoon">Good afternoon</string>
    <string name="greeting_evening">Good evening</string>
    <string name="greeting_night">Good night</string>
    <string name="greeting_early_morning">Good night</string>
    <string name="greeting_all_day">Good day</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="reconnect_pi_question">Reconnect pi?</string>
    <string name="reconnect_pi_warning">You will be logged out of the app and won\'t be able to log in until your Raspberry Pi has connected to the server</string>
    <string name="continue_string">Continue</string>
    <string name="pi_disconnect_failed">Could not set server value</string>
    <string name="confirmed_account_deletion">Confirmed, deleting account…</string>
    <string name="incorrect_code_entered">Incorrect numbers</string>
    <string name="device_found">Device found</string>
    <string name="searching_for_device">Searching for nearby devices</string>
    <string name="successfully_connected_to_pi">Connected to Raspberry Pi</string>
    <string name="setup_successful">Setup successful!</string>
    <string name="exit">Exit</string>
    <string name="attention">Attention</string>
    <string name="permission_needed">Permission needed</string>
    <string name="location_permission_explanation">To log in your Raspberry Pi to your account, location permission is required. Once your Raspberry Pi is connected, you can turn this permission off in settings</string>
    <string name="edit_message">Edit message</string>
    <string name="notification_message_explanation">This will show in your notifications when the conditions are met</string>
    <string name="save">Save</string>
    <string name="please_enter_number">Please enter a number</string>
    <string name="inactive">Inactive</string>
    <string name="email_already_exists">This email is already associated with an account</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_too_common">This password is too common, please choose another one</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete this device? This action cannot be undone</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_delete_scene">Are you sure you want to delete this scene? This action cannot be undone</string>
    <string name="displayname_thermostat">Thermostat</string>
    <string name="displayname_coffeemaker">Coffee</string>
    <string name="displayname_blinds">Window Blinds</string>
    <string name="displayname_rgblight">RGB Light</string>
    <string name="displayname_light">Light</string>
    <string name="displayname_kettle">Kettle</string>
    <string name="displayname_socket">Socket</string>
    <string name="displayname_cooler">Cooler</string>
    <string name="displayname_dimmable_light">Dimmable Light</string>
    <string name="displayname_on_off_sensor">Boolean sensor</string>
    <string name="displayname_motion_sensor">Motion sensor</string>
    <string name="displayname_door_sensor">Door sensor</string>
    <string name="displayname_door_lock">Door lock</string>
    <string name="displayname_water_presence_sensor">Water presence sensor</string>
    <string name="displayname_water_level_sensor">Water level sensor</string>
    <string name="displayname_moisture_sensor">Moisture sensor</string>
    <string name="displayname_temperature_sensor">Temperature (°C)</string>
    <string name="displayname_humidity">Humidity sensor</string>
    <string name="displayname_integer_sensor">Integer sensor</string>
    <string name="displayname_ir_remote">IR remote</string>
    <string name="displayname_ir_rgb_remote">RGB remote</string>
    <string name="displayname_nulldevice">null</string>
    <string name="displayname_heater">Heater</string>
    <string name="displayname_tv_remote">TV Remote</string>
    <string name="placeholder_status">Placeholder status</string>
    <string name="nav_devices">Devices</string>
    <string name="nav_scenes">Scenes</string>
    <string name="nav_settings">Settings</string>
    <string name="dialog_add_a_new_device">Add a new device</string>
    <string name="chars_newline">\n</string>
    <string name="set_button_codes">Set button codes</string>
    <string name="null_this_page_has_not_been_implemented_yet">This page has not been implemented yet</string>
    <string name="reg_create_account">Create account</string>
    <string name="temp_sensor_current_temperature">Current temperature</string>
    <string name="thermostat_target_temperature">Target temperature</string>
    <string name="current_temperature">Current temperature</string>
    <string name="hex_codes_divider"><![CDATA[# -->]]></string>
    <string name="placeholder_switch">Turn on off</string>
</resources>
